# ee445m-labs

./: .gitignore  CMakeLists.txt  Doxyfile  README.org  _s_t7735_8c.html  _s_t7735_8c.js  _s_t7735_8c__incl.map  _s_t7735_8c__incl.md5  _s_t7735_8c_a04cac5a318b3e0515fad06fa00cdd3b9_cgraph.map  _s_t7735_8c_a05c18aa8dd363fe991d5bc73a02e7abc_icgraph.map  _s_t7735_8c_a072f5f963df6e48f5985977526d2466c_cgraph.md5  _s_t7735_8c_a15f25be4c64c91057ac3cbb563574286_cgraph.map  _s_t7735_8c_a15f25be4c64c91057ac3cbb563574286_cgraph.md5  _s_t7735_8c_a15f25be4c64c91057ac3cbb563574286_icgraph.map  _s_t7735_8c_a15f25be4c64c91057ac3cbb563574286_icgraph.md5  _s_t7735_8c_a1719f525285902712d14efeab76cedcd_cgraph.md5  _s_t7735_8c_a179ccebd4bfe4529903a02ce797e78ea_cgraph.md5  _s_t7735_8c_a1e4c9d5bbf2df16b1f9235bd24c8e231_cgraph.map  _s_t7735_8c_a1e4c9d5bbf2df16b1f9235bd24c8e231_cgraph.md5  _s_t7735_8c_a1e4c9d5bbf2df16b1f9235bd24c8e231_icgraph.map  _s_t7735_8c_a1e4c9d5bbf2df16b1f9235bd24c8e231_icgraph.md5  _s_t7735_8c_a204a442207d7367ace616bd6bfd79348_cgraph.map  _s_t7735_8c_a204a442207d7367ace616bd6bfd79348_cgraph.md5  _s_t7735_8c_a204a442207d7367ace616bd6bfd79348_icgraph.map  _s_t7735_8c_a204a442207d7367ace616bd6bfd79348_icgraph.md5  _s_t7735_8c_a24baab918efa9202f1801fdf794d3f51_cgraph.map  _s_t7735_8c_a24baab918efa9202f1801fdf794d3f51_cgraph.md5  _s_t7735_8c_a24baab918efa9202f1801fdf794d3f51_icgraph.map  _s_t7735_8c_a24baab918efa9202f1801fdf794d3f51_icgraph.md5  _s_t7735_8c_a251efc57a6fa4ff630c2d74d66c9dcd3_icgraph.map  _s_t7735_8c_a251efc57a6fa4ff630c2d74d66c9dcd3_icgraph.md5  _s_t7735_8c_a29294596f660f05ad8738db73ee07cfa_icgraph.md5  _s_t7735_8c_a2c091bb2f7905e4464a6152015a49989_cgraph.map  _s_t7735_8c_a2c091bb2f7905e4464a6152015a49989_cgraph.md5  _s_t7735_8c_a2c091bb2f7905e4464a6152015a49989_icgraph.map  _s_t7735_8c_a2c091bb2f7905e4464a6152015a49989_icgraph.md5  _s_t7735_8c_a343770585eeeabee4360207d19df1d65_cgraph.map  _s_t7735_8c_a343770585eeeabee4360207d19df1d65_cgraph.md5  _s_t7735_8c_a3a14506207ab49aee2c40700b5036271_cgraph.map  _s_t7735_8c_a3a14506207ab49aee2c40700b5036271_cgraph.md5  (+5051 more)
board-progs/: CMakeLists.txt  map.ld
board-progs/autonomous-racer/: #test-cpp.cpp#  CMakeLists.txt  drive.org
board-progs/blinky/: CMakeLists.txt  blinky.c  map.ld
board-progs/lab5-valvano/: CMakeLists.txt  SDCFile.c  edisk.c  edisk.h  efile.h
board-progs/test-adc/: CMakeLists.txt  startup_gcc.c  test-adc.c
board-progs/test-button/: CMakeLists.txt  test-button.c
board-progs/test-can/: CMakeLists.txt  test-can.c
board-progs/test-combination/: CMakeLists.txt  test-combination.c
board-progs/test-cpp/: CMakeLists.txt  adcpp.cpp  adcpp.hpp  blinker.cpp  blinker.hpp  bufferpp.cpp  bufferpp.hpp  canpp.cpp  canpp.hpp  circularbuffer.hpp  criticalpp.cpp  criticalpp.hpp  ctlsysctl.hpp  direction.hpp  drive.org  drivepp.cpp  drivepp.hpp  gpio_twiddler.hpp  hardwarepp.cpp  hardwarepp.hpp  interruptable.hpp  ir.cpp  ir.hpp  motorpp.cpp  motorpp.hpp  pingpp.cpp  pseudo-buffer.h  semaphorepp.cpp  semaphorepp.hpp  shellpp.cpp  shellpp.hpp  test-cpp.cpp  timerpp.cpp  timerpp.hpp  uartpp.cpp  uartpp.hpp
board-progs/test-debounce/: CMakeLists.txt  test-debounce.c
board-progs/test-display/: CMakeLists.txt  test-display.c
board-progs/test-edf/: CMakeLists.txt  test-edf.c
board-progs/test-fft/: CMakeLists.txt  adc_sim.cpp  adc_sim.hpp  test_fft.cpp
board-progs/test-lab4/: CMakeLists.txt  convolve.m  filter_gen.m  shit.m  signal_gen.m  sine.h  test-convolve.m  test-data.m  test-lab4.c  test.m
board-progs/test-lab4-prep/: CMakeLists.txt  T0003CH2-work.csv  T0003CH2.CSV  data.org  lowpass_filter.m  test-lab4-prep.c
board-progs/test-lab5/: CMakeLists.txt  filesystem_commands.c  filesystem_commands.h  test-lab5.c
board-progs/test-os/: CMakeLists.txt  startup_gcc.c  test-os.c
board-progs/test-ping/: CMakeLists.txt  test-ping.c
board-progs/test-priority-scheduler/: CMakeLists.txt  test-priority-scheduler.c
board-progs/test-semaphore/: CMakeLists.txt  startup_gcc.c  test-semaphore.c
board-progs/test-shell/: CMakeLists.txt  startup_gcc.c  test-shell.c
board-progs/test-switch/: CMakeLists.txt  test-switch.cpp
board-progs/test-timer/: CMakeLists.txt  startup_gcc.c  test-timer.c
board-progs/test-uart/: CMakeLists.txt  test-uart.c
board-progs/ti-can-rx/: CMakeLists.txt  simple_rx.c
board-progs/ti-can-tx/: CMakeLists.txt  simple_tx.c
cmsis/: CMakeLists.txt
lib/: CMakeLists.txt  todo.org
lib/libadc/: CMakeLists.txt  adc.c  adc.h  adc_sim.cpp  adc_sim.hpp
lib/libbuffer/: buffer.h
lib/libbutton/: CMakeLists.txt  button.c  button.h
lib/libcan/: CMakeLists.txt  PLL.c  PLL.h  Timer3.c  Timer3.h  can0.c  can0.h  interrupt.c  main.c
lib/libclock/: CMakeLists.txt  clock.c  clock.h  libclock.dox
lib/libconsole/: CMakeLists.txt  console_framebuffer.c  console_framebuffer.h  libconsole.dox
lib/libdisplay/: CMakeLists.txt  ST7735.c  ST7735.h  stdio_hershic.h
lib/libfatfs/: CMakeLists.txt  diskio.c  diskio.h  ff.c  ff.h  ffconf.h
lib/libfont/: font.h  libfont.dox
lib/libframebuffer/: framebuffer.c  framebuffer.h  libframebuffer.dox
lib/libgraphics2d/: CMakeLists.txt  fonts.h  framebuffer.c  framebuffer.h  g2d_defines.h  graphics2d.c  graphics2d.h  libgraphics2d.dox  shape.c  shape.h  todo.org
lib/libheart/: CMakeLists.txt  heart.dox  heartbeat.c  heartbeat.h
lib/libhw/: CMakeLists.txt  hardware.c  hardware.dox  hardware.h  libhw.c  libhw.dox  libhw.h  semaphore.h
lib/libio/: CMakeLists.txt  button.h  kbd.h  libio.dox
lib/libmath/: CMakeLists.txt
lib/libnotify/: notify.dox  notify.h
lib/libos/: CMakeLists.txt  jitter.c  jitter.h  os.c  os.dox  os.h  semaphore.c  semaphore.dox  semaphore.h  system.c  system.dox  system.h  thread_structures.h
lib/liboscope-grapher/: CMakeLists.txt  graph_framebuffer.c  graph_framebuffer.h  graphlib.c  graphlib.h
lib/libschedule/: CMakeLists.txt  edf.c  edf.h  priority_schedule_structures.h  schedule.c  schedule.h
lib/libshell/: CMakeLists.txt  shell.c  shell.dox  shell.h
lib/libstd/: CMakeLists.txt  defines.h  exit.h  nexus.c  nexus.h
(+389 files in other folders)
