add_subdirectory(libadc libadc)
add_subdirectory(libclock libclock)
add_subdirectory(libconsole libconsole)
add_subdirectory(libfont libfont)
add_subdirectory(libframebuffer libframebuffer)
add_subdirectory(libgraphics2d libgraphics2d)
add_subdirectory(libmath libmath)
add_subdirectory(libos libos)
add_subdirectory(liboscope-grapher liboscope-grapher)
add_subdirectory(libstd libstd)
add_subdirectory(libtimekit libtimekit)
add_subdirectory(libtimer libtimer)
add_subdirectory(libuart libuart)
