# TODO: add_subdirectory(libstd libstd)
# TODO: add_subdirectory(libmath libmath)
# TODO: add_subdirectory(libgraphics2d libgraphics2d)
# TODO: add_subdirectory(libframebuffer libframebuffer)
# TODO: add_subdirectory(libclock libclock)
# TODO: add_subdirectory(liboscope-grapher liboscope-grapher)

add_subdirectory(libadc libadc)
add_subdirectory(libconsole libconsole)
add_subdirectory(libtimekit libtimekit)
add_subdirectory(libuart libuart)
add_subdirectory(libtimer libtimer)
add_subdirectory(libshell libshell)
add_subdirectory(libhw libhw)
add_subdirectory(libstd libstd)
add_subdirectory(libdisplay libdisplay)
add_subdirectory(libos libos)
add_subdirectory(libio libio)
